--- a/.github/workflows/hourly_task.yml
+++ b/.github/workflows/hourly_task.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run script
-        run: python your_script.py
+        run: python test.py.py
