--- a/.github/workflows/hourly_task.yml
+++ b/.github/workflows/hourly_task.yml
@@ -1,19 +1,30 @@
-name: Hourly Script
+name: Nodecraft Auto Starter
+
 on:
   schedule:
-    - cron: '0 * * * *'  # Runs at the start of every hour
-  workflow_dispatch:      # Allows you to run it manually for testing
+    - cron: '0 * * * *' # Runs every hour
+  workflow_dispatch: # Allows manual testing
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.10'
+
+      - name: Install Chrome
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+
       - name: Install dependencies
-        run: pip install -r requirements.txt
-      - name: Run script
-        run: python test.py.py
+        run: |
+          pip install -r requirements.txt
+
+      - name: Run Python script
+        run: python TEST.py
